--- a/css/styles.css
+++ b/css/styles.css
@@ -271,8 +271,8 @@ header > .container {
   margin-right: 30px;
 }
 
-.item-portfolio:hover,
-.item-portfolio:focus {
+.item-portfolio > a:hover,
+.item-portfolio > a:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -305,6 +305,7 @@ header > .container {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .portfolio-link:hover .overlay-txt,
 .portfolio-link:focus .overlay-txt {
   transform: translateY(-100%);
